--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" type="text/css" href="index.css">
   <title>My Website</title>
 </head>
 <body>
+
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
       <li class="dropdown">
         <a href="#" class="dropbtn">Products</a>
         <div class="dropdown-content">
@@ -16,13 +16,22 @@
           <a href="#">Product 2</a>
           <a href="#">Product 3</a>
         </div>
+      
+      <li><a href="note.html">NOTE</a></li>
+      <li><a href="Photo.jpg">SURPRISE</a> </li>
+
+      
       </li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
-  <h1>Welcome to My Website</h1>
+  <h1>Insert</h1>
   <p>This is a basic website with a dropdown menu.</p>
 </body>
+</html>
+
+<html>
+  
 </html>
 
 
