--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <li class="dropdown">
         <a href="#" class="dropbtn">Products</a>
         <div class="dropdown-content">
-          <a href="#">Product 1</a>
+          <a href="song1.html">Product 1</a>
           <a href="#">Product 2</a>
           <a href="#">Product 3</a>
         </div>
