--- a/public/song1.html
+++ b/public/song1.html
@@ -1,42 +1,14 @@
-<!-- <html>
-  <head>
-    <title>My YouTube Video</title>
-  </head>
-  <body>
-    <h1>My YouTube Video</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/8aDmnOgBXZA?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </body>
-</html> -->
+
 <html>
   <head>
     <title>SONG 1 </title>
     <link rel="stylesheet" type="text/css" href="song1.css">
   </head>
   <body>
-    <h1>I LOVE YOU</h1>
+    <h1>
+      <a href="index.html"class=button>HOME</a>
+  </h1>
+    <h1>ESLABON FOR YOU MI AMOR</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8aDmnOgBXZA?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
-
-
-<!-- <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="note.css">
-    <title>My Note</title>
-
-  </head>
-  <h1>Merry Christmas</h1>
-  <body>
-    <p> Dear Jessy </p>
-    <p>  I, hope you have enjoyed your break so far. I just have a couple requests :) </p>
-    <p>  Lets grow old together and cuddle as we watch out favorite movies 😉</p>
-    <p> Or we can sing our hearts out while I give you an award winning performance. You can also feel my ...  </p>
-     <p> Vibrations while I comfort you. Also lets go out and ...</p> 
-     <p> Eat all of out favorite food (Tricycle, Birria, Ratty😂) </p>
-     <p>Yet in reality all I want to do is spend time with you. Even when you are ...</p>
-     <p>Overstressed about life I will always be there for you. You have changed my life forever and am forever grateful to have been given the opportunity to love you. </p>
-    <p> Unforntunaly this letter is coming to an End put please click the back arrow and then the SURPRISE</p>
-    <p>  .</p>
-    <p>hopefully the page is oriented correctly(If haven't noticed it says starting letters spell I love you🙈 ) </p>
-  </body> -->
-  
