--- a/public/instructions.html
+++ b/public/instructions.html
@@ -38,16 +38,19 @@
         <p>2)READ THE NOTE</p>
       </div>
       <div class="center">
-        <p>3)USE THE SURPRISES MENU AND CLICK EACH SURPRISE BY ORDER</p>
+        <p>3)TURN ON YOUR VOLUME </p>
       </div>
       <div class="center">
-        <p>4)THE PASSWORD FOR 3rd SURPRISE IS chaylovesjessy</p>
+        <p>4)USE THE SURPRISES MENU AND CLICK EACH SURPRISE BY ORDER</p>
       </div>
       <div class="center">
-        <p>5)OPEN THE 3RD SURPRISE IN PRIVATE AWAY FROM FAMILY</p>
+        <p>5)THE PASSWORD FOR 3rd SURPRISE IS chaylovesjessy</p>
       </div>
       <div class="center">
-        <p>6)CLICK ON THE LAST SURPRISE</p>
+        <p>6)OPEN THE 3RD SURPRISE IN PRIVATE AWAY FROM FAMILY</p>
+      </div>
+      <div class="center">
+        <p>7)CLICK ON THE LAST SURPRISE</p>
       </div>
   </body>
 </html>
