--- a/public/instructions.html
+++ b/public/instructions.html
@@ -32,6 +32,9 @@
       
     </div>
     <div class="center">
+        <p>0)OPEN ON COMPUTER</p>
+      </div>
+    <div class="center">
         <p>1)DO NOT CLICK THE FINAL SURPRISE TILL THE END</p>
       </div>
       <div class="center">
