--- a/public/locked.html
+++ b/public/locked.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <!-- Other head content -->
+    <link rel="stylesheet" type="text/css" href="locked.css">
   </head>
   <body>
     <!-- Passcode form -->
@@ -14,7 +15,7 @@
     <!-- Content to be protected -->
     <div id="protected-content">
       <!-- Content goes here -->
-      <a href="song3.html">Surprise 3</a>
+      <a href="song3.html" class=button>Surprise 3</a>
     <script>
       // Get the passcode form and the protected content element
       const passcodeForm = document.getElementById('passcode-form');
