--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         </div>
       
       <li><a href="note.html">NOTE</a></li>
-      <li><a href="Photo.jpg">FINAL SURPRISE</a> </li>
+      <li><a href="finalsurpriselock.html">FINAL SURPRISE</a> </li>
 
       
       </li>
