--- a/public/instructions.html
+++ b/public/instructions.html
@@ -28,7 +28,7 @@
 
   <body>
     <div class="center">
-      <p>COUPLE OF INSTRUCTIONS</p>
+      <p>COUPLE OF INSTRUCTIONS TO GET THE PASSWORD FOR THE FINAL SURPRISE: READ ALL!!!</p>
       
     </div>
     <div class="center">
