--- a/public/song3.html
+++ b/public/song3.html
@@ -9,6 +9,9 @@
         <img src="Locked2.png" alt="Image 3">
         <img src="funnycat.png" alt="Image 1">
         <img src="Locked3.png" alt="Image 4">
+        <img src="Locked4.png" alt="Image 5">
+        <img src="Locked5.png" alt="Image 4">
+        
       </div>
     <h1>
         <a href="index.html"class=button>HOME</a>
