--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="index.css">
-  <title>My Website</title>
+  <title>I LOVE YOU MERRY CHRISTMAS</title>
 </head>
 <!-- <div class="header-image">
   <img src="Photo.jpg" alt="Header image">
